fix: nav overflow

--- a/src/Styles/global.css
+++ b/src/Styles/global.css
@@ -42,7 +42,7 @@ Link {
     padding-inline: 8vw;
     display: flex;
     align-items: center;
-    overflow-x: hidden;
+    overflow: hidden;
     position: relative;
 }
 
